# rosettes

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: pages.yml  tests.yml  ty.yml
benchmarks/: README.md  __init__.py  benchmark_vs_pygments.py  conftest.py  sample_code.py
plan/: rfc-fixture-expansion.md  rfc-test-hardening.md
scripts/: generate_fixtures.py
site/.bengal/indexes/: author_index.json  category_index.json  date_range_index.json  section_index.json
site/config/_default/: autodoc.yaml  build.yaml  content.yaml  external_refs.yaml  features.yaml  fonts.yaml  outputs.yaml  params.yaml  search.yaml  site.yaml  theme.yaml
site/config/environments/: local.yaml  production.yaml
site/content/: _index.md
site/content/api/: _index.md
site/content/docs/: _index.md
site/public/: .llm-full.hash  404.html  asset-manifest.json  index.html  index.json  index.json.hash  index.txt  llm-full.txt  rss.xml  search-index.json  sitemap.xml
src/rosettes/: __init__.py  _config.py  _escape.py  _formatter_registry.py  _parallel.py  _protocol.py  _registry.py  _types.py  delegate.py
src/rosettes.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  conftest.py
tests/edge_cases/: __init__.py  test_boundaries.py  test_escapes.py  test_nested.py  test_unicode.py  test_unterminated.py
tests/formatters/: __init__.py  test_escaping.py  test_html_formatter.py  test_null_formatter.py  test_protocol.py  test_registry.py  test_terminal_formatter.py
tests/lexers/: __init__.py  conftest.py  test_fixtures.py  test_javascript_sm.py  test_kida_sm.py  test_php_sm.py  test_python_sm.py  test_rust_sm.py  test_yaml_sm.py
tests/properties/: __init__.py  test_lexer_invariants.py
tests/security/: __init__.py  test_redos.py
tests/themes/: __init__.py  test_css_generation.py  test_palettes.py  test_roles.py
(+960 files in other folders)
